<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/homee"
            android:title="@string/home" />
        <item
            android:id="@+id/item_fav"
            android:icon="@drawable/favourite"
            android:title="@string/favourite" />
        <item
            android:id="@+id/item_alert"
            android:icon="@drawable/siren"
            android:title="@string/alert" />

        <item
            android:id="@+id/item_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
    </group>

</menu>