<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Settings.SettingActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/vani_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:visibility="invisible"
        app:headerLayout="@layout/navigation"
        app:itemIconTint="?android:attr/colorPressedHighlight"
        app:itemTextColor="#0087A3"
        app:menu="@menu/menue"
        tools:visibility="gone">

    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1572A1"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/setting"
            app:titleMarginStart="150dp"
            app:titleTextColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="159dp"
            android:layout_height="98dp"
            android:layout_marginTop="8dp"

            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <RadioButton
                android:id="@+id/radioButton12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:textColor="#1F2527" />

            <RadioButton
                android:id="@+id/radioButton13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/map" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="152dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16">

            <RadioButton
                android:id="@+id/radioButton14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/radioButton15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/arabic" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <RadioGroup
            android:layout_width="155dp"
            android:layout_height="152dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17">

            <RadioButton
                android:id="@+id/radioButton16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kelvin" />

            <RadioButton
                android:id="@+id/radioButton17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celsius" />

            <RadioButton
                android:id="@+id/radioButton18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="158dp"
            android:layout_height="97dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18">

            <RadioButton
                android:id="@+id/radioButton19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metersec" />

            <RadioButton
                android:id="@+id/radioButton20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mileshour" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/windspeed"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>

